--- a/ClinicaMedical/Common/Common.csproj
+++ b/ClinicaMedical/Common/Common.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cache\CacheDoUsuario.cs" />
+    <Compile Include="Cache\Positions.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
