Add recuperaçao de senha/Envio de email

--- a/ClinicaMedical/Presentation/Presentation.csproj
+++ b/ClinicaMedical/Presentation/Presentation.csproj
@@ -88,6 +88,12 @@
     <Compile Include="FormMainMenu.Designer.cs">
       <DependentUpon>FormMainMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormRecoverPass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormRecoverPass.Designer.cs">
+      <DependentUpon>FormRecoverPass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormCalendario.resx">
@@ -110,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMainMenu.resx">
       <DependentUpon>FormMainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormRecoverPass.resx">
+      <DependentUpon>FormRecoverPass.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
