--- a/ClinicaMedical/DataAcess/DataAcess.csproj
+++ b/ClinicaMedical/DataAcess/DataAcess.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionToSql.cs" />
+    <Compile Include="MailServices\MainMailServer.cs" />
+    <Compile Include="MailServices\SystemSupportMail.cs" />
+    <Compile Include="SqlServer\ConnectionToSql.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserDao.cs" />
+    <Compile Include="SqlServer\UserDao.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
